<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">动漫家</string>
    <string name="main_user_info">个人信息</string>
    <string name="main_my_collection">我的收藏</string>
    <string name="main_feedback">意见反馈</string>
    <string name="main_setting">设置</string>
    <string name="action_search">搜索</string>
    <string name="find_recommend">推荐</string>
    <string name="find_category">类型</string>
    <string name="find_theme">题材</string>
    <string name="find_area">地区</string>
    <string name="find_more">查看更多</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    
    <string name="action_video_collet">收藏</string>
    <string name="action_video_edit">编辑</string>
    <string name="action_video_delete">删除</string>
    <string name="action_video_cancel">取消</string>
    
    <string-array name="find_catorgy_tab_title">
        <item >热血</item>
        <item >悬疑</item>
        <item >唯美</item>
    </string-array>
    
    
    <string-array name="detail_indicator_title">
        <item >剧集</item>
        <item >类似</item>
        <item >简介</item>
    </string-array>
    
    <string-array name="theme_tab_title">
        <item >最新</item>
        <item >经典</item>
        <item >国漫</item>
    </string-array>
    
    
    <string-array name="hot_tab_title">
        <item >最新</item>
        <item >经典</item>
        <item >国漫</item>
    </string-array>
    
    <string-array name="main_slidetab_title">
        <item >首页</item>
        <item >专题</item>
        <item >追剧</item>
        <item >热门</item>
    </string-array>
    
    <string-array name="main_drawer_title">
        <item >动漫首页</item>
        <item >动漫收藏</item>
        <item >帮助</item>
        <item >设置</item>
        <item >关于</item>
    </string-array>
    
    <string-array name="detail_slide_tab">
        <item>简介</item>
        <item>剧集</item>
    </string-array>
    
    <array name="main_drawer_img">
        <item>@drawable/ic_ringtones_menu</item>
        <item>@drawable/ic_actionbar_myrings</item>
        <item>@drawable/ic_help_menu</item>
        <item>@drawable/ic_setting_menu</item>
        <item>@drawable/ic_about_menu</item>
    </array>
    
    <string name="score_red">#E12C1A</string>
    <string name="score_orange">#FF9611</string>
    <string name="score_green">#9EB540</string>
    <string name="score_gray">#A4A3A3</string>
    
    <string name="main_menu_playrecorder">播放记录&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="main_menu_offline">本地视频&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    
    
    <!-- 
    空格 -> &#160;
    换行 -> \n;
    缩进 -> \t;
    " -> &#34; 或 &quot; 
    ' -> &#39; 或 &apos;
    & -> &#38; 或 &amp;
    lt(<) -> &#60; 或 &lt;
    gt(>) -> &#62; 或 &gt;
    
     -->
    
</resources>
